Adição de firebase, area login, area restrita...

--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -104,6 +104,16 @@
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "Frontend:build"
+          }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "Frontend:build:production",
+            "firebaseProject": "cybersecfirebase",
+            "firebaseHostingSite": "cybersecfirebase"
           }
         }
       }
